# WebDevelop

./: .gitignore  Build_simple_by_yaml.txt  Implement_steps.txt  Makefile  README.md  run_server_and_fe.bash  temp.c
.github/workflows/: fe.yml  frontend.yml  python_ai.yml  references.yml
backend/: .gitignore
backend/node_ai/: package-lock.json  package.json  server.js
backend/python_ai/: .gitignore  README.md  m4_default_models.py  run_ai.py  run_ai_tui.py
c-lib/: Makefile  README.md
c-lib/deployments/: README.md  docker-compose.yml
c-lib/docs/: FLOW_DIGRAM.md  PRIVATE_REGISTRY.md  TUTORIAL_BINDINGS.md  UNUSED_CODE.md  VECTOR_RAG_STATUS.md  WHY_ONLY_OLLAMA_NOT_REDIS.md  api.md  consumers.md  getting-started-python.md  smart_topic.md  stat.md  tutorial_chat_l1_memory.md
c-lib/include/: api.h  dispatcher.h  elk.h  embed.h  engine.h  geo_learning.h  lang.h  model_switch.h  mongo.h  ollama.h  redis.h  smart_topic.h  stat.h  storage.h  tenant.h  terminal_ui.h  utils.h  validate.h  vector_generate.h
c-lib/src/: api.c  debug_monitor.c  embed.c  embed_worker.c  geo_authority.c  model_switch.c  redis.c  smart_topic.c  stat.c  utils.c  validate.c
c_ai/: Makefile  README.md  c_ai_bot
c_lib/: .gitignore
fe/: Implement_steps.txt  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/: .gitignore  Implement_steps.txt  index.html  package-lock.json  package.json  vite.config.js
python_ai/: .gitignore  Makefile  engine_ctypes.py  requirements-dev.txt
python_ai/m4engine_binary_dist/: pyproject.toml
references/: .gitignore
(+245 files in other folders)
