[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m4engine-binary"
version = "1.0.0-beta"
description = "Prebuilt libm4engine (dylib/so) for Python ctypes — install from git or path"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
include = ["m4engine_binary*"]

[tool.setuptools.package-data]
m4engine_binary = ["native/*"]
